--- a/Capstone/Capstone/Data Cleaning Doc.Rmd
+++ b/Capstone/Capstone/Data Cleaning Doc.Rmd
@@ -49,3 +49,20 @@ DF <- DF %>% mutate(`price` = ifelse(is.na(price), "25", price))
 ##### Removed columns of data that would not be used in analysis
 DF3 <- DF[, c(1,2,5,6,7,13,14)]
 
+
+
+
+
+
+##### Need to do
+Add in sub categories with variety
+Add in sub categories with Country
+Create new plots with those additional categories
+
+
+Useful formula
+ggplot(WineList, aes(x=log(price))) + geom_histogram(aes(fill=country), alpha=0.40)
+ggplot(WineList, aes(x=price)) + geom_histogram(aes(fill=variety), aes=0.4)
+ggplot(wine_data, aes(x=price)) + geom_histogram(aes(fill=vareity), aes=0.4)
+
+
